--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
           <a href="https://facebook.com/indraw369" target="_blank"
             ><i id="fb" class="bx bxl-facebook"></i
           ></a>
-          <a href="https://fastwork.com/user/iiindraw" target="_blank"
+          <a href="https://fastwork.id/user/iiindraw" target="_blank"
             ><i id="fw" class="bx bx-paperclip"></i
           ></a>
           <a href="https://wa.me/6281246385041" target="_blank"
