--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
               <li><a href="#portfolio">Portfolio</a></li>
               <li><a href="#skills">Skills</a></li>
               <li><a href="#contact">Contact</a></li>
+              <li><a href="https://fastwork.id/user/iiindraw/web-development-43633047" target="_blank">Testimonial</a></li>
             </ul>
           </div>
         </div>
