--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <meta name="keywords" content="Bali Freelance Web Developer" />
     <meta name="author" content="Bagus Indraw" />
 
+    <!-- favicon -->
+    <link rel="icon" type="image/x-icon" href="/img/indraw.ico" />
+
     <!-- main css -->
     <link rel="stylesheet" href="/css/style.css" />
 
@@ -38,7 +41,13 @@
               <li><a href="#portfolio">Portfolio</a></li>
               <li><a href="#skills">Skills</a></li>
               <li><a href="#contact">Contact</a></li>
-              <li><a href="https://fastwork.id/user/iiindraw/web-development-43633047" target="_blank">Testimonial</a></li>
+              <li>
+                <a
+                  href="https://fastwork.id/user/iiindraw/web-development-43633047"
+                  target="_blank"
+                  >Testimonial</a
+                >
+              </li>
             </ul>
           </div>
         </div>
