--- a/index.html
+++ b/index.html
@@ -41,13 +41,6 @@
               <li><a href="#portfolio">Portfolio</a></li>
               <li><a href="#skills">Skills</a></li>
               <li><a href="#contact">Contact</a></li>
-              <li>
-                <a
-                  href="https://fastwork.id/user/iiindraw/web-development-43633047"
-                  target="_blank"
-                  >Testimonial</a
-                >
-              </li>
             </ul>
           </div>
         </div>
@@ -76,6 +69,13 @@
           <a href="https://wa.me/6281246385041" target="_blank"
             ><i id="wa" class="bx bxl-whatsapp"></i
           ></a>
+        </div>
+        <div class="btn-testi">
+          <a
+            href="https://fastwork.id/user/iiindraw/web-development-43633047"
+            target="_blank"
+            >View Testimonial</a
+          >
         </div>
       </div>
     </section>
